Slot in URI when throwing back an error page to the agent linker

--- a/frontend/app/views/agents/_linker.html.erb
+++ b/frontend/app/views/agents/_linker.html.erb
@@ -2,7 +2,9 @@
    if form.obj['ref'].blank?
      selected_json = "{}"
    else
-     selected_json =  form.obj['_resolved'].to_json
+     selected = form.obj['_resolved'].clone
+     selected['uri'] ||= form.obj['ref']
+     selected_json =  selected.to_json
    end
 %>
 <div class="control-group">
