--- a/frontend/app/views/related_agents/_template.html.erb
+++ b/frontend/app/views/related_agents/_template.html.erb
@@ -11,7 +11,13 @@
                                                        :type => form["_resolved"]["agent_type"],
                                                        :uri => form["_resolved"]["uri"])) %>
         <% else %>
-          <%= render :partial => "agents/linker", :locals => {:form => form, :linker_label => I18n.t("#{relationship_type}.ref")} %>
+          <%= render :partial => "agents/linker",
+                     :locals => {
+                         :form => form,
+                         :linker_label => I18n.t("#{relationship_type}.ref"),
+                         :allowed_types => form.allowable_types_for("ref")
+                     }
+           %>
         <% end %>
       </div>
     </div>
