--- a/public/app/views/layouts/application.html.erb
+++ b/public/app/views/layouts/application.html.erb
@@ -5,6 +5,8 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+  <%= favicon_link_tag %>
+
   <%= include_theme_css %>
 
   <%= csrf_meta_tags %>
