--- a/frontend/app/views/accessions/_sidebar.html.erb
+++ b/frontend/app/views/accessions/_sidebar.html.erb
@@ -48,6 +48,10 @@
       <li><a href="#accession_collection_management_"><%= I18n.t "collection_management._html.singular" %> <span class="icon-chevron-right"></span></a></li>
     <% end %>
 
+    <% if not controller.action_name === "show" or @accession.user_defined %>
+      <li><a href="#accession_user_defined_"><%= I18n.t "user_defined._html.singular" %> <span class="icon-chevron-right"></span></a></li>
+    <% end %>
+
     <% if not controller.action_name === "show" %>
       <li class="form-actions">
         <button type="submit" class="btn btn-primary"><%= I18n.t "actions.save_prefix" %> <%= I18n.t "accession._html.singular" %></button>
