fied too many ellipses bug

--- a/frontend/app/views/user_defined/_show.html.erb
+++ b/frontend/app/views/user_defined/_show.html.erb
@@ -5,7 +5,7 @@
   ["integer_1", "integer_2", "real_1", "real_2", "string_1", "string_2", "string_3", "text_1", "text_2", "text_3", "text_4"].each do |k|
     if collapsed_vals.size < 3
       if !user_defined[k].nil?
-        collapsed_vals << I18n.t("user_defined.#{k}") + ": #{user_defined[k][0,15]}&hellip;"
+        collapsed_vals << I18n.t("user_defined.#{k}") + ": #{user_defined[k].size > 17 ? (user_defined[k][0,15]+'&hellip;') : user_defined[k]}"
       end
     end
   end
