--- a/public/app/views/records/digital_object_component.html.erb
+++ b/public/app/views/records/digital_object_component.html.erb
@@ -14,6 +14,9 @@
       <div id="">
         <ul class="nav nav-list as-nav-list">
           <li><a href="#summary"><%= I18n.t("digital_object_component._html.section.summary") %> <span class="icon-chevron-right"></span></a></li>
+          <% if @digital_object_component['file_versions'].length > 0 %>
+            <li><a href="#file_versions"><%= I18n.t("file_version._html.plural") %> <span class="icon-chevron-right"></span></a></li>
+          <% end %>
           <% if @digital_object_component['extents'].length > 0 %>
             <li><a href="#extents"><%= I18n.t("extent._html.plural") %> <span class="icon-chevron-right"></span></a></li>
           <% end %>
@@ -38,6 +41,26 @@
             <%= label_and_value I18n.t("digital_object_component.language"), i18n_enum(:digital_object_component, 'language', @digital_object_component['language']) %>
           </dl>
         </section>
+
+        <% if @digital_object_component['file_versions'].length > 0 %>
+          <section id="file_versions">
+            <h3><%= I18n.t("file_version._html.plural") %></h3>
+            <ul class="results-list">
+              <% @digital_object_component['file_versions'].each do |file| %>
+                <%
+                  uri = URI(file['file_uri'])
+                %>
+                <li class="result">
+                  <% if uri.scheme === "http" %>
+                    <%= link_to file['file_uri'], file['file_uri'] %>
+                  <% else %>
+                    <%= file['file_uri'] %>
+                  <% end %>
+                </li>
+              <% end %>
+            </ul>
+          </section>
+        <% end %>
 
         <% if @digital_object_component['extents'].length > 0 %>
           <section id="extents">
