--- a/public/app/views/records/resource.html.erb
+++ b/public/app/views/records/resource.html.erb
@@ -1,11 +1,16 @@
 <%
    locations = {}
+   digital_objects = {}
 
    if not @resource['instances'].blank?
      @resource['instances'].each do |instance|
-       instance['container']['container_locations'].each do |cl|
-         next if cl['status'] === 'previous'
-         locations[cl['ref']] = cl['_resolved']
+       if instance['instance_type'] === "digital_object"
+         digital_objects[instance['digital_object']['ref']] = instance['digital_object']['_resolved']
+       else
+         instance['container']['container_locations'].each do |cl|
+           next if cl['status'] === 'previous'
+           locations[cl['ref']] = cl['_resolved']
+         end
        end
      end
    end
@@ -35,6 +40,9 @@
           <% end %>
           <% if locations.length > 0 %>
             <li><a href="#locations"><%= I18n.t("location._html.plural") %> <span class="icon-chevron-right"></span></a></li>
+          <% end %>
+          <% if digital_objects.length > 0 %>
+            <li><a href="#digital_objects"><%= I18n.t("digital_object._html.plural") %> <span class="icon-chevron-right"></span></a></li>
           <% end %>
           <% if @tree['children'].length %>
             <li><a href="#components"><%= I18n.t("resource._html.section.components") %> <span class="icon-chevron-right"></span></a></li>
@@ -103,6 +111,22 @@
                   <h4>
                     <%= icon_for "location" %>
                     <%= link_to location['title'], {:controller => :search, :action => :location, :id => JSONModel(:location).id_for(uri)} %>
+                  </h4>
+                </li>
+              <% end %>
+            </ul>
+          </section>
+        <% end %>
+
+        <% if not digital_objects.empty? %>
+          <section id="digital_objects">
+            <h3><%= I18n.t("digital_object._html.plural") %></h3>
+            <ul class="results-list">
+              <% digital_objects.each do |uri, digital_object| %>
+                <li class="result">
+                  <h4>
+                    <%= icon_for "digital_object" %>
+                    <%= link_to digital_object['title'], {:controller => :records, :action => :digital_object, :id => JSONModel(:digital_object).id_for(uri)} %>
                   </h4>
                 </li>
               <% end %>
