47691817 throw a 404 if attempting to view an unpublished resource (or child archival object)

--- a/public/app/views/errors/404.html.erb
+++ b/public/app/views/errors/404.html.erb
@@ -1,1 +1,6 @@
-<h2>Record Not Found</h2>
+<%= setup_context :title => I18n.t("errors.error_404"), :suppress_breadcrumb => true %>
+
+<div class="alert alert-error">
+  <h2><%= I18n.t("errors.error_404") %></h2>
+  <p><%= I18n.t("errors.error_404_message") %></p>
+</div>
