47691817 Fix digital object component publish not sticking; Only show digital object component in public app if published - so publish is exposed now in the index and in the tree data;

--- a/public/app/views/errors/404.html.erb
+++ b/public/app/views/errors/404.html.erb
@@ -1,4 +1,7 @@
-<%= setup_context :title => I18n.t("errors.error_404"), :suppress_breadcrumb => true %>
+<%=
+  @breadcrumbs = []
+  setup_context :title => I18n.t("errors.error_404"), :suppress_breadcrumb => true
+%>
 
 <div class="alert alert-error">
   <h2><%= I18n.t("errors.error_404") %></h2>
