--- a/public/app/views/records/resource.html.erb
+++ b/public/app/views/records/resource.html.erb
@@ -44,7 +44,7 @@
           <% if digital_objects.length > 0 %>
             <li><a href="#digital_objects"><%= I18n.t("digital_object._html.plural") %> <span class="icon-chevron-right"></span></a></li>
           <% end %>
-          <% if @tree['children'].length %>
+          <% if @children.length %>
             <li><a href="#components"><%= I18n.t("resource._html.section.components") %> <span class="icon-chevron-right"></span></a></li>
           <% end %>
         </ul>
@@ -134,12 +134,12 @@
           </section>
         <% end %>
 
-        <% if @tree['children'].length %>
+        <% if @children.length %>
           <section id="components">
             <h3><%= I18n.t("resource._html.section.components") %></h3>
 
             <ul class="results-list">
-              <% @tree['children'].each do |child| %>
+              <% @children.each do |child| %>
                 <li class="result">
                   <h4>
                     <%= icon_for child["node_type"] %>
