--- a/public/app/views/records/digital_object.html.erb
+++ b/public/app/views/records/digital_object.html.erb
@@ -27,7 +27,7 @@
           <% if @digital_object['linked_instances'].length > 0 %>
             <li><a href="#linked_instances"><%= I18n.t("linked_instance._html.plural") %> <span class="icon-chevron-right"></span></a></li>
           <% end %>
-          <% if @children.length %>
+          <% if @children.length > 0 %>
             <li><a href="#components"><%= I18n.t("digital_object._html.section.components") %> <span class="icon-chevron-right"></span></a></li>
           <% end %>
         </ul>
@@ -110,7 +110,7 @@
           </section>
         <% end %>
 
-        <% if @children.length %>
+        <% if @children.length > 0 %>
           <section id="components">
             <h3><%= I18n.t("digital_object._html.section.components") %></h3>
 
