--- a/frontend/app/views/archival_objects/_form_container.html.erb
+++ b/frontend/app/views/archival_objects/_form_container.html.erb
@@ -27,6 +27,7 @@
       <%= form.label_and_textfield "other_level" %>
       <%= form.label_and_select "language", form.possible_options_for("language", true) %>
       <%= form.label_and_boolean "internal_only" %>
+      <%= form.label_and_boolean "publish", {}, form.default_for("publish") %>
     </section>
   <% end %>
 
