Fix translations for displaying dates

--- a/frontend/app/views/dates/_show.html.erb
+++ b/frontend/app/views/dates/_show.html.erb
@@ -15,7 +15,7 @@
               <span class="icon-chevron-down"></span>
             </div>
             <div class="span2">
-              <%= I18n.t("date.label_#{date['label']}") %>
+              <%= I18n.t("enumerations.date_label.#{date['label']}") %>
             </div>
             <div class="span6">
               <!--https://www.pivotaltracker.com/story/show/41527633 -->
@@ -28,7 +28,7 @@
               <% end %>
             </div>
             <div class="span3">
-              <% if date['certainty']%><%= I18n.t("date.certainty#{date['certainty']}") %><% end %>
+              <% if date['certainty']%><%= I18n.t("enumerations.date_certainty.#{date['certainty']}") %><% end %>
             </div>
           </div>
         </div>
