46512927 add contact_persons to repository

--- a/frontend/app/views/repositories/_form_container.html.erb
+++ b/frontend/app/views/repositories/_form_container.html.erb
@@ -20,6 +20,8 @@
       <%= form.label_and_textfield "email" %>
       <%= form.label_and_textfield "email_signature" %>
       <hr/>
+      <%= form.label_and_textarea "contact_persons" %>
+      <hr/>
       <%= form.label_and_textfield "url" %>
       <%= form.label_and_textfield "image_url" %>
     </section>
