Introduce new mechanism to interpolate JSONModel objects in I18n locale messages and hook it up for Archival Records.
WIP allow for JSONModels to be interpolated with locale strings

WIP Fix html not escaped from record titles and breaks linker/tree widgets; Further tweaking of Archival Record messages to include interpolation of jsonmodel data;

Update Accession messages to include the record's title; Fix enumeration labels in some readonly templates (from previous PR);

Update the select-repo I18n message to use the new mechanism for interpolation

--- a/frontend/app/assets/javascripts/tree.js.erb
+++ b/frontend/app/assets/javascripts/tree.js.erb
@@ -417,7 +417,7 @@ $(function() {
           $(".token-input-dropdown").hide();
         } else {
           $(".tree-transfer-form", ".archives-tree-container").css("display", "block");
-          $(".tree-transfer-form form", ".archives-tree-container").submit(function(event) {
+          $(".tree-transfer-form form", ".archives-tree-container").unbind("submit").submit(function(event) {
             if ($(this).serializeObject()['transfer[ref]']) {
               // continue with the POST
               return;
@@ -429,6 +429,9 @@ $(function() {
               return true;
             }
           });
+          setTimeout(function() {
+            $("#token-input-transfer_ref_", ".archives-tree-container").focus();
+          })
         }
       });
       $(".archives-tree-container").on("click", ".tree-transfer-form :input", function(event) {
