--- a/frontend/app/views/deaccessions/_show.html.erb
+++ b/frontend/app/views/deaccessions/_show.html.erb
@@ -16,7 +16,7 @@
               <span class="icon-chevron-down"></span>
             </div>
             <div class="span1">
-              <%= I18n.t("deaccession.scope_#{deaccession["scope"]}") %>
+              <%= I18n.t("enumerations.deaccession_scope.#{deaccession["scope"]}", :default => deaccession["scope"]) %>
             </div>
             <div class="span3">
               <% if deaccession["date"]['date_type'] === "expression" %>
