--- a/frontend/app/views/archival_objects/_form_container.html.erb
+++ b/frontend/app/views/archival_objects/_form_container.html.erb
@@ -14,7 +14,7 @@
     <section id="basic_information">
       <h3><%= I18n.t("archival_object._html.section.basic_information") %></h3>
 
-      <%= form.label_and_textfield("title", :field_opts => {:automatable => true})%>
+      <%= form.label_and_textfield("title", :field_opts => {:automatable => true}, :required => true)%>
     
       <% if form.obj["ref_id"].blank? %>
         <%= form.label_and_readonly "ref_id", "<em>#{I18n.t("archival_object.ref_id_auto_generation_message")}</em>" %>
