--- a/frontend/app/views/digital_object_components/_sidebar.html.erb
+++ b/frontend/app/views/digital_object_components/_sidebar.html.erb
@@ -42,7 +42,7 @@
 
     <% if not controller.action_name === "show" %>
       <div class="form-actions">
-        <% if controller.action_name === "new" or controller.action_name === "create" %>
+        <% if @digital_object_component.id.blank? %>
           <div class="btn-group btn-submit-group">
             <button type="submit" class="btn btn-primary"><%= I18n.t("actions.save_prefix") %> <%= I18n.t("digital_object_component._html.singular") %></button>
             <button type="button" id="createPlusOne" class="btn btn-primary btn-plus-one"><%= I18n.t("actions.save_plus_one") %></button>
