EAC export fix: don't blow up if a non-system event is linked to an agent being exported.

--- a/frontend/app/views/agents/show.html.erb
+++ b/frontend/app/views/agents/show.html.erb
@@ -86,7 +86,7 @@
           <%= render :partial => "notes/show", :locals => { :notes => @agent.notes, :context => readonly } %>
         <% end %>
 
-        <% if @agent.related_agents.length > 0 %>
+        <% if !@agent['related_agents'].blank? %>
           <%= render :partial => "related_agents/show", :locals => { :related_agents => @agent.related_agents, :context => readonly } %>
         <% end %>
 
