--- a/frontend/app/views/agents/_sidebar.html.erb
+++ b/frontend/app/views/agents/_sidebar.html.erb
@@ -20,7 +20,7 @@
       <li><a href="#notes"><%= I18n.t("note._html.plural") %> <span class="icon-chevron-right"></span></a></li>
     <% end %>
 
-    <% if not controller.action_name === "show" or @agent.related_agents.length > 0 %>
+    <% if not controller.action_name === "show" or !@agent['related_agents'].blank? %>
       <li><a href="#related_agents"><%= I18n.t("related_agent._html.plural") %> <span class="icon-chevron-right"></span></a></li>
     <% end %>
 
