--- a/frontend/app/views/groups/_form.html.erb
+++ b/frontend/app/views/groups/_form.html.erb
@@ -14,7 +14,7 @@
 
 <div class="control-group">
   <div class="controls">
-    <input id="new-member" class="input-medium" type="text" placeholder="Username" />
+    <input id="new-member" class="input-medium" type="text" autocomplete="off" placeholder="Username" />
     <button id="add-new-member" class="btn btn-small"><%= I18n.t("actions.add") %></button>
   </div>
 </div>
