--- a/frontend/app/assets/javascripts/groups.crud.js.erb
+++ b/frontend/app/assets/javascripts/groups.crud.js.erb
@@ -17,8 +17,11 @@ $(function() {
 
   var addNewMember = function(e) {
     // Only interested in events on the input box if they've hit enter.
+    // If the typeahead is visible, then select that item rather than
+    // add what is typed.  User can 'esc' to close the typeahead, and then
+    // hit return/tab to the button to add the custom userid.
     if ($(e.target).attr("id") == "new-member") {
-      if ((e.keyCode || e.which) != 13) {
+      if (((e.keyCode || e.which) != 13) || $(".typeahead.dropdown-menu", ".member-toolbar").length) {
         return;
       }
     }
@@ -42,6 +45,7 @@ $(function() {
     e.preventDefault();
 
     $(':selected', "#group_member_usernames_").remove();
+    $("#remove-member").attr("disabled","disabled");
   };
 
 
@@ -73,9 +77,9 @@ $(function() {
 
   $("#group_member_usernames_").change(function (e) {
     if ($(':selected', e.target).length > 0) {
-      $("#remove-member").show();
+      $("#remove-member").removeAttr("disabled");
     } else {
-      $("#remove-member").hide();
+      $("#remove-member").attr("disabled","disabled");
     }
   });
 
@@ -123,7 +127,7 @@ $(function() {
   $("#new-member").typeahead({
           source: function(query, process) {
             username_typeahead.handle(query, process);
-          },
+          }
         });
 
 });
