WIP extra subrecord add buttons and refactored note forms to remove the dropdown buttons

--- a/frontend/app/assets/stylesheets/archivesspace/form.less
+++ b/frontend/app/assets/stylesheets/archivesspace/form.less
@@ -639,3 +639,11 @@ ul.subrecord-form-list {
     .border-radius(0 0 @inputBorderRadius @inputBorderRadius);
   }
 }
+
+.subrecord-add-as-you-go-actions {
+  margin-top: 10px;
+  padding-top: 10px;
+  text-align: center;
+  width: 100%;
+  border-top: 1px solid #EEE;
+}
