--- a/frontend/app/views/shared/_subrecord_form.html.erb
+++ b/frontend/app/views/shared/_subrecord_form.html.erb
@@ -38,6 +38,7 @@
       <%= form.list_for(form[name], "#{name}[]") do |item| %>
         <% form.emit_template(template, item) %>
       <% end %>
+      <div class="subrecord-add-as-you-go-actions btn-group"></div>
     <% end %>
   </div>
 
