--- a/frontend/app/assets/stylesheets/archivesspace/form.less
+++ b/frontend/app/assets/stylesheets/archivesspace/form.less
@@ -641,9 +641,33 @@ ul.subrecord-form-list {
 }
 
 .subrecord-add-as-you-go-actions {
-  margin-top: 10px;
-  padding-top: 10px;
+  @asyougotransition: opacity linear .4s, height linear .4s, padding linear .4s;
+  .transition(@asyougotransition);
   text-align: center;
   width: 100%;
   border-top: 1px solid #EEE;
+  .opacity(40);
+  height: 0;
+  overflow: hidden;
+  padding: 0 10px;
+}
+
+.subrecord-form:hover .subrecord-add-as-you-go-actions,
+.focus .subrecord-add-as-you-go-actions {
+  @asyougotransition: opacity linear .2s, height linear .2s, padding linear .2s;
+  .transition(@asyougotransition);
+  .opacity(100);
+  height: 25px;
+  padding: 10px;
+}
+
+.subrecord-form-fields > .note-form-container > li > .subrecord-form-fields {
+  border-left: none;
+  border-right: none;
+  border-bottom: none;
+  .border-radius(0 0 @inputBorderRadius @inputBorderRadius);
+
+  > .subrecord-form-heading {
+    .border-radius(0);
+  }
 }
